# nim-kzg-nomos-da

./: .gitignore  .gitmodules  Makefile  README.md  nim.cfg  nomos_da.nimble
ffi-wrapper/: Cargo.toml  build.rs  cbindgen.toml
ffi-wrapper/src/: lib.rs
ffi-wrapper/tests/: lib.rs
src/: kzg_nomos_da.nim
src/kzg_nomos_da/: types.nim
tests/: test_encoder.nim  test_reconstruction.nim  test_serialization.nim  test_share.nim  test_verifier.nim
