[package]
name = "nomos-da-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "nomos_da_ffi"
crate-type = ["cdylib", "rlib"]

[dependencies]
kzgrs-backend = { path = "../logos-blockchain/nomos-da/kzgrs-backend", default-features = false }
kzgrs = { path = "../logos-blockchain/nomos-da/kzgrs", default-features = false }

[features]
default = []
