[package]
name = "nomos-da-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "nomos_da_ffi"
crate-type = ["staticlib", "rlib"]
path = "src/lib.rs" 

[dependencies]
kzgrs-backend = { path = "../logos-blockchain/nomos-da/kzgrs-backend", default-features = false }
kzgrs = { path = "../logos-blockchain/nomos-da/kzgrs", default-features = false }
nomos-core = { path = "../logos-blockchain/nomos-core/chain-defs", default-features = false }

[build-dependencies]
cbindgen = "0.26"
