[package]
name = "nomos-da-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "nomos_da_ffi"
crate-type = ["staticlib", "rlib"]
path = "src/lib.rs" 

[dependencies]
logos-blockchain-kzgrs-backend = { path = "../logos-blockchain/da/kzgrs-backend", default-features = false }
logos-blockchain-kzgrs = { path = "../logos-blockchain/da/kzgrs", default-features = false }
logos-blockchain-core = { path = "../logos-blockchain/core", default-features = false }

[build-dependencies]
cbindgen = "0.26"
